# ClipsRIFInterpreter

./: .gitignore  Makefile  NOTICE  README.md  helper_myfilter.py  mycreate.sh  qq.sh  resources.mk
src/: CMakeLists.txt  Config.cmake.in  clips.patch  generate_cmake_module.cmake  install_helper.cmake  locate_clips.cmake
src/assets/: OwlLogic.clp  ParseNTriplesFile.ntriples
src/builtin_resources/: CMakeLists.txt  crifi_builtin_resources.c  crifi_builtin_resources.h  data_compilelist_modela.cmake  generate_builtin_model.c  overwrite_builtin_models.cmake.in  recreate_builtin_graph_model.cmake
src/builtin_resources/data_modela/: Makefile  action-from-formula-as-clause.rifps  action-from-formula-as-clause.ttl  add-as-pattern.rifps  add-as-pattern.ttl  apply-generator.rifps  apply-generator.ttl  constants.rifps  constants.ttl  create-root-script.rifps  create-root-script.ttl  create_multipattern_lists.rifps  create_multipattern_lists.ttl  crifi_modelA.rifps  crifi_modelA.ttl  crifi_modelA_checker.rifps  crifi_modelA_checker.ttl  formula-as-test.rifps  formula-as-test.ttl  import-rules.rifps  import-rules.ttl  inheritance.rifps  inheritance.ttl  init-defrules.rifps  init-defrules.ttl  process-Frames.rifps  process-Frames.ttl  process-equal.rifps  process-equal.ttl  process-external.rifps  process-external.ttl  process_Atom.rifps  process_Atom.ttl  process_Do.rifps  process_Do.ttl  process_execute.rifps  process_execute.ttl  process_lists.rifps  process_lists.ttl  process_member.rifps  (+16 more)
src/clips_interface/: CMakeLists.txt  clips.patch  clips_to_interface.c  clips_to_interface.h  crifi_boolean.h  dataspace_constants.h  ffi_clips_interface.c  graph_engine.c  graph_engine.h
src/clips_interface/cmake_tools/: CMakeLists.txt  crifi_implement_clips_program_in_build_script.cmake  crifi_implement_clips_program_in_build_skel.h.in
src/clips_interface/crifi_time/: CMakeLists.txt  clips_to_time.c  crifi_time.c  crifi_time.h  crifi_timedata.c  crifi_timedata.h  datenumeric.c  macros_date_to_days.h  timedata_object.c  timedata_object.h  timeduration_object.c  timeduration_object.h
src/clips_interface/external_functions/: CMakeLists.txt  binary_user_defined_functions.c  binary_user_defined_functions.h  boolean_user_defined_functions.c  boolean_user_defined_functions.h  clipsvalue_check_datatype.c  clipsvalue_check_datatype.h  constfunctions.h  errormanagment.c  errormanagment.h  external_functions.c  external_functions.h  import_user_defined_functions.c  import_user_defined_functions.h  list_user_defined_functions.c  list_user_defined_functions.h  math_user_defined_functions.c  math_user_defined_functions.h  own_user_defined_functions.c  own_user_defined_functions.h  plainliteral_user_defined_functions.c  plainliteral_user_defined_functions.h  pred_user_defined_functions.c  pred_user_defined_functions.h  string_user_defined_functions.c  string_user_defined_functions.h  time_user_defined_functions.c  time_user_defined_functions.h  xmlliteral_user_defined_functions.c  xmlliteral_user_defined_functions.h
src/clips_interface/graph_models/: CMakeLists.txt  crifi_graph_models.c  crifi_graph_models.h  crifi_graph_models_debug.c  first.clp  first_old.clp  modelA.clp  modelAchecker.clp  stablemodel.clp
src/clips_interface/importdirective/: CMakeLists.txt  bnode_lookup.c  bnode_lookup.h  clipsvalue_interface.c  clipsvalue_interface.h  crifi_import.c  crifi_import.h  direct_interpretation.c  direct_interpretation.h  init_data.c  interpretation.c  interpretations.h  node_retriever.h  pair_list.c  pair_list.h  rdf_list.c  rdf_list.h  rdf_to_rif_interpretation.c  simple_to_owl_interpretation.c  simple_to_owl_interpretation.h
src/clips_interface/info_query/: CMakeLists.txt  blanknodes.c  fact_interface.c  genclipscode.c  info_query.c  info_query.h  internal_fact_interface.c
src/clips_interface/interface/: CMakeLists.txt  dataspace_constants.h  ffi_clips_interface.h  ffi_constants.h
src/clips_interface/lists/: CMakeLists.txt  crifi_lists.c  crifi_lists.h  crifi_lists_clipsvalue.c  crifi_lists_clipsvalue.h
src/clips_interface/n3parser/: CMakeLists.txt  init_data.c  n3parser.c  n3parser.h  percent_encode.h
src/clips_interface/numeric/: CMakeLists.txt  base_calculations.c  clipsvalue.c  crifi_numeric.c  crifi_numeric.h  datatypes.c  datatypes.h
src/clips_interface/objects/: CMakeLists.txt  crifi_objects.c  crifi_objects.h
src/clips_interface/time/: CMakeLists.txt  crifi_time.c  crifi_time.h
src/clips_interface/tools/: CMakeLists.txt  check_datatype.c  check_datatype.h  debug.c  debug.h  internal_uriencode.h  tools.h  uriencode.c  uriencode.h  xpath_replace.c  xpath_replace.h
src/clips_interface/utilities/: CMakeLists.txt  crifi_utilities.h  measure_activations.c
src/clips_script_serializer/: CMakeLists.txt  clips_script_serializer.c  clips_script_serializer.h
src/clips_update/: CMakeLists.txt
src/generate_crifi_script/: CMakeLists.txt  generate_crifi_script.cc  oneshot_crifi_script.cc
src/import_implementations/: CMakeLists.txt  combine_importlocations.c  crifi_import_implementations.c  crifi_import_implementations.h  import_as_source.cmake  import_as_source_script.cmake  import_as_source_script_skel.h.in  import_from_file.c  import_from_file.h
src/ntriples_parser/: CMakeLists.txt  ntriples.lex  ntriples.yacc
src/raptor_serializer/: CMakeLists.txt  clips_script_serializer.c  clips_script_serializer.h  crifi_raptor.h  crifi_raptor_interface.c  crifi_raptor_interface.h  include_raptor.cmake  parse_with_import.c  parse_with_raptor.c  raptor_serializer.c  raptor_serializer.h  rdf_object.c  rdf_object.h
src/resource_manager/: CMakeLists.txt  additional_user_functions.cc  additional_user_functions.h  importer_classes.cc  importer_classes.h  rema_functions.cc  rema_functions.h  resource_manager.cc  resource_manager.h
src/tests/: CMakeLists.txt  builtins_model_test.cc  graph_generation_test.cc  hello_test.cc  import_test.cc  logmanagment.cmake  model_support.c  model_support.h  raptor_test.cc  serialize_test.cc  testcases2_test.cc  testcases_test.cc  w3c_tests.cmake
(+320 files in other folders)
